<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_games.xml"
    app:startDestination="@id/title_matchmaking_lucky_game">

    <fragment
        android:id="@+id/title_matchmaking_lucky_game"
        android:name="com.diggingdy.nastyslo.ui.scene.games.MatchmakingEasyGameFragment"
        android:label="@string/title_matchmaking_lucky_game"
        tools:layout="@layout/fragment_matchmaking_easy_game" />

    <fragment
        android:id="@+id/title_matchmaking_jack_game"
        android:name="com.diggingdy.nastyslo.ui.scene.games.MatchmakingMediumGameFragment"
        android:label="@string/title_matchmaking_jack_game"
        tools:layout="@layout/fragment_matchmaking_medium_game" />

    <fragment
        android:id="@+id/matchmaking_maria_game"
        android:name="com.diggingdy.nastyslo.ui.scene.games.MatchmakingHardGameFragment"
        android:label="@string/title_matchmaking_maria_game"
        tools:layout="@layout/fragment_matchmaking_hard_game" />

</navigation>