<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_scene_lucky"
    tools:context=".ui.scene.games.MatchmakingEasyGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_wins"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_text_game"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <TextView
            android:id="@+id/text_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arvo_bold"
            android:text="@string/text_wins"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arvo_bold"
            android:text="@string/text_result_wins"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp65"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_wins" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scene_game"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_scene_game"
        android:orientation="vertical"
        android:padding="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/control_bar_game"
        app:layout_constraintStart_toEndOf="@+id/status_wins"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_bar_game"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/scene_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scene_game">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_bar_level"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:background="@drawable/background_text_game"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_high_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_title_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo_bold"
                android:text="@string/title_level"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp15"
                app:layout_constraintBottom_toTopOf="@+id/text_selected_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_selected_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo_bold"
                android:text="@string/text_selected_level"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp25"
                app:layout_constraintBottom_toTopOf="@+id/btn_change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_level" />

            <ImageView
                android:id="@+id/btn_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_change"
                android:clickable="true"
                android:contentDescription="@string/button_change"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_selected_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_high_score"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:background="@drawable/button_high_score"
            android:clickable="true"
            android:contentDescription="@string/button_high_score"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_bar_level" />

        <ImageView
            android:id="@+id/btn_start"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:background="@drawable/button_start"
            android:clickable="true"
            android:contentDescription="@string/button_start"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_high_score" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_back"
        android:clickable="true"
        android:contentDescription="@string/button_back"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>