<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arvo_bold"
            android:text="@string/text_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/sp45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/background_text"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_sounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/text_sounds"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_on"
                    android:clickable="true"
                    android:contentDescription="@string/button_on"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_off"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_off_color"
                    android:clickable="true"
                    android:contentDescription="@string/button_off"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_text"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/text_vibration"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_on_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_on_color"
                    android:clickable="true"
                    android:contentDescription="@string/button_on"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_off_vibration"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_off_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_off"
                    android:clickable="true"
                    android:contentDescription="@string/button_off"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_text"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/title_level"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_selected_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/text_selected_level"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/sp15"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_change_level"
                    app:layout_constraintStart_toEndOf="@+id/text_level"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_change_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_change"
                    android:clickable="true"
                    android:contentDescription="@string/button_change"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_text"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/title_theme"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_selected_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arvo_bold"
                    android:text="@string/text_selected_theme"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/sp15"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_change_theme"
                    app:layout_constraintStart_toEndOf="@+id/text_theme"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/button_change_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_change"
                    android:clickable="true"
                    android:contentDescription="@string/button_change"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/button_continue"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_continue"
            android:clickable="true"
            android:contentDescription="@string/button_continue"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:contentDescription="@string/button_back"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>